# covsnap

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SPEC.md  deneme1.json  deneme1.tsv  deneme1_mqc.json  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-07-perf-html-report.md  2026-04-13-interactive-mode.md
examples/: sample_exon_output.tsv  sample_raw_output.tsv  sample_report.md  sample_report_guardrails.md
paper/: paper.bib  paper.md
recipes/conda/: build.sh  meta.yaml  test_verify_html.py
scripts/: covsnap.desktop
src/covsnap/: __init__.py  annotation.py  bed.py  cli.py  engines.py  gui.py  html_report.py  interactive.py  metrics.py  output.py  report.py  serialize.py
src/covsnap/data/: hg38_exons.bed.gz.tbi  hg38_genes.tsv.gz.tbi
tests/: conftest.py  test_annotation.py  test_cli_smoke.py  test_engines.py  test_guardrails.py  test_gui.py  test_html_report.py  test_interactive.py  test_metrics.py  test_report.py  test_serialize.py
