[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "covsnap"
version = "0.4.0"
description = "Coverage inspector for targeted sequencing QC (hg38)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Enes Ak"},
]
keywords = ["bioinformatics", "coverage", "sequencing", "quality-control", "hg38"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pysam>=0.22",
    "numpy>=1.24",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "pytest-timeout>=2",
]
dev = [
    "ruff",
    "covsnap[test]",
]

[project.scripts]
covsnap = "covsnap.cli:main"

[project.urls]
Homepage = "https://github.com/enes-ak/covsnap"
Repository = "https://github.com/enes-ak/covsnap"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
covsnap = [
    "data/*.tsv.gz",
    "data/*.tsv.gz.tbi",
    "data/*.bed.gz",
    "data/*.bed.gz.tbi",
    "data/*.json.gz",
    "data/*.png",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# html_report.py embeds CSS/HTML/JS string literals that would be harder
# to read if wrapped; the line-length rule is not meaningful for them.
"src/covsnap/html_report.py" = ["E501"]
